background image update

--- a/Website/2020-10-08 CSE Website/assets/css/mdb.css
+++ b/Website/2020-10-08 CSE Website/assets/css/mdb.css
@@ -9615,8 +9615,17 @@ table.table a.btn.btn-black {
 .card {
     font-weight: 400;
     border: 0;
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
+    border-radius: 20px;
+    background: #ffffff;
+    box-shadow:  -13px 13px 26px #f2f2f2, 
+                 13px -13px 26px #ffffff;
+}
+
+.card:hover{
+    border-radius: 20px;
+background: #ffffff;
+box-shadow:  20px 20px 60px #d9d9d9, 
+             -20px -20px 60px #ffffff;
 }
 
 .card[class*="border"] {
