--- a/BizLand/assets/css/style.css
+++ b/BizLand/assets/css/style.css
@@ -449,7 +449,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 90vh;
+  /* height: 90vh; */
   background:#EBEBEB;
   background-size: cover;
   position: relative;
@@ -550,8 +550,9 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
   #hero {
-    height: 100vh;
+    /* height: 100vh; */
   }
+  
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
@@ -568,7 +569,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-height: 500px) {
   #hero {
-    height: 120vh;
+    /* height: 120vh; */
   }
 }
 
