--- a/BiziLand/assets/css/style.css
+++ b/BiziLand/assets/css/style.css
@@ -16,7 +16,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Work sans", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -71,9 +71,16 @@ h1, h2, h3, h4, h5, h6 {
   border:none;
 }
 
-.service .serve:hover i h5{
-  color:#009f
+.services .serve:hover{
+  box-shadow: 0px 0 8px 0 rgba(16, 110, 234, 0.063);
+  cursor:pointer;
+  transition: all ease-in-out 0.3s;
 }
+.services .serve:hover i, .services .serve:hover h5 {
+  color:#009FE3;
+  transition: all ease-in-out 0.3s;
+}
+
 
 /*--------------------------------------------------------------
 # Back to top button
@@ -193,7 +200,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 50px;
 }
 
 @media (max-width: 992px) {
@@ -213,6 +220,8 @@ h1, h2, h3, h4, h5, h6 {
 .scrolling-active .nav{
   height: 6.6rem;
 }
+
+
 .scrolling-active {
   color: #222222;
 }
@@ -709,7 +718,7 @@ section {
   transition: all 0.3s ease-in-out;
   border-radius: 8px;
   z-index: 1;
-  min-width: 300px;
+  width: 300px;
 }
 
 .featured-services .icon-box::before {
@@ -897,14 +906,16 @@ section {
 }
 
 .clients img {
-  max-width: 45%;
+  max-width: 75%;
   transition: all 0.4s ease-in-out;
   display: inline-block;
   padding: 15px 0;
+  filter: grayscale(100%);
 }
 
 .clients img:hover {
   transform: scale(1.15);
+  filter:none;
 }
 
 @media (max-width: 768px) {
@@ -912,6 +923,33 @@ section {
     max-width: 40%;
   }
 }
+
+/*--------------------------------------------------------------
+# Brands
+--------------------------------------------------------------*/
+.brands {
+  padding: 15px 0;
+  text-align: center;
+}
+
+.brands img {
+  max-width: 75%;
+  transition: all 0.4s ease-in-out;
+  display: inline-block;
+  padding: 15px 0;
+}
+
+.brands img:hover {
+  transform: scale(1.15);
+}
+
+@media (max-width: 768px) {
+  .brands img {
+    max-width: 40%;
+  }
+}
+
+
 
 /*--------------------------------------------------------------
 # Services
