--- a/BiziLand/assets/css/cse.css
+++ b/BiziLand/assets/css/cse.css
@@ -15,3 +15,22 @@
    grid-template-columns:  repeat(6, 60px);
    grid-template-rows: repeat(6, 60px);
    }
+
+   /* ------------------------------------------------------------
+#brand icons animation
+------------------------------------------------------------ */
+.anim{
+   transform:scale(1);
+   transition: all .4s ease-in-out;
+ }
+ .anim:hover{
+    transform:scale(1.1);
+    transition: all .4s ease-in-out;
+    -webkit-box-shadow: 5px 3px 13px 1px rgba(0,0,0,0.34); 
+   box-shadow: 5px 3px 13px 1px rgba(0,0,0,0.34);
+
+ }
+ 
+ 
+ 
+ 
