--- a/BiziLand/assets/css/style.css
+++ b/BiziLand/assets/css/style.css
@@ -19,6 +19,18 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Work sans", sans-serif;
 }
 
+.welcome{
+  transition: all 2s linear;
+  display: block;
+}
+
+.hidden{
+  display: none;
+}
+.visuallyhidden {
+  opacity: 0;
+}
+
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
@@ -74,11 +86,14 @@ h1, h2, h3, h4, h5, h6 {
 .services .serve:hover{
   box-shadow: 0px 0 8px 0 rgba(16, 110, 234, 0.063);
   cursor:pointer;
-  transition: all ease-in-out 0.3s;
 }
+.services .serve i, .services .serve h5 {
+   transition: all .3s ease-out
+}
+
 .services .serve:hover i, .services .serve:hover h5 {
   color:#009FE3;
-  transition: all ease-in-out 0.3s;
+   transition: all .3s ease-out
 }
 
 
