--- a/BiziLand/assets/css/style.css
+++ b/BiziLand/assets/css/style.css
@@ -1824,8 +1824,8 @@ section {
 }
 
 #footer .footer-top .footer-links ul li {
-  padding: 10px 0;
-  display: flex;
+  padding: 4px 0;
+  /* display: flex; */
   align-items: center;
 }
 
@@ -1884,4 +1884,10 @@ section {
     text-align: center;
     padding: 2px 0;
   }
+}
+
+.square {
+  height: 50px;
+  width: 50px;
+  background-color: rgb(26, 25, 25);
 }
