--- a/BiziLand/assets/css/cse.css
+++ b/BiziLand/assets/css/cse.css
@@ -28,6 +28,7 @@
     transition: all .4s ease-in-out;
     -webkit-box-shadow: 5px 3px 13px 1px rgba(0,0,0,0.34); 
    box-shadow: 5px 3px 13px 1px rgba(0,0,0,0.34);
+   cursor: pointer;
 
  }
 
