--- a/BiziLand/assets/css/cse.css
+++ b/BiziLand/assets/css/cse.css
@@ -26,8 +26,8 @@
  .anim:hover{
     transform:scale(1.2);
     transition: all .4s ease-in-out;
-    -webkit-box-shadow: 5px 3px 13px 1px rgba(0, 0, 0, 0.27); 
-   box-shadow: 5px 3px 13px 1px rgba(0, 0, 0, 0.27);
+    -webkit-box-shadow: 5px 3px 13px 1px rgba(0,0,0,0.34); 
+   box-shadow: 5px 3px 13px 1px rgba(0,0,0,0.34);
    cursor: pointer;
 
  }
