--- a/BiziLand/assets/css/style.css
+++ b/BiziLand/assets/css/style.css
@@ -507,12 +507,12 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .container {
   position: relative;
-  padding: 50px 0 50px 0;
+  padding-top: 50px;
 }
 
 @media (max-width: 992px) {
   #hero .container {
-    padding: 58px 0 58px 0;
+    padding-top: 58px;
   }
 }
 
